--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   shared_preferences: ^2.0.15
   image_picker: ^0.8.6
   provider: ^6.0.4
+  url_launcher: ^6.1.7
+  font_awesome_flutter: ^10.3.0
 dev_dependencies:
   flutter_test: {sdk: flutter}
   flutter_lints: ^2.0.0
